// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-14238.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export const foo = (
  // prettier-ignore
  bar as Baz
).qux;

=====================================output=====================================
export const foo = // prettier-ignore
(bar as Baz).qux;

================================================================================
`;

exports[`mapped-types.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type a= {
    // prettier-ignore
    [A in B]: C  |  D
  }

type a= {
    [
      // prettier-ignore
      A in B
    ]: C  |  D
  }

type a= {
    [
      A in
      // prettier-ignore
      B
    ]: C  |  D
  }

type a= {
    [A in B]:
      // prettier-ignore
      C  |  D
  }

type a= {
    [
      /* prettier-ignore */
      A in B
    ]: C  |  D
  }

type a= {
    [
      A in
      /* prettier-ignore */
      B
    ]: C  |  D
  }

type a= {
    [A in B]:
      /* prettier-ignore */
      C  |  D
  }


type a= {
    /* prettier-ignore */ [A in B]: C  |  D
  }

type a= {
    [/* prettier-ignore */ A in B ]: C  |  D
  }

type a= {
    [A in /* prettier-ignore */ B]: C  |  D
  }

type a= {
    [A in B]: /* prettier-ignore */ C  |  D
  }

type a= {
    /* prettier-ignore */
    [A in B]: C  |  D
  }

=====================================output=====================================
type a = {
    // prettier-ignore
    [A in B]: C  |  D
  };

type a = {
    [
      // prettier-ignore
      A in B
    ]: C  |  D
  };

type a = {
  [A in // prettier-ignore
  B]: C | D;
};

type a = {
  [A in B]: // prettier-ignore
  C | D;
};

type a = {
    [
      /* prettier-ignore */
      A in B
    ]: C  |  D
  };

type a = {
  [A in /* prettier-ignore */
  B]: C | D;
};

type a = {
  [A in B]: /* prettier-ignore */
  C | D;
};

type a = {
    /* prettier-ignore */ [A in B]: C  |  D
  };

type a = {
    [/* prettier-ignore */ A in B ]: C  |  D
  };

type a = {
  [A in /* prettier-ignore */ B]: C | D;
};

type a = {
  [A in B /* prettier-ignore */]: C | D;
};

type a = {
    /* prettier-ignore */
    [A in B]: C  |  D
  };

================================================================================
`;

exports[`prettier-ignore-nested-unions.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export type a =
  // foo
  | foo1&foo2
  // bar
  | bar1&bar2
  // prettier-ignore
  | (
    | aaaaaaaaaaaaa&1
    // b
    | bbbbbbbbbbbbb&2
  )
  // baz
  | baz1&baz2;

export type b =
  // foo
  | foo1&foo2
  // bar
  | bar1&bar2
  | (
    // prettier-ignore
    | aaaaaaaaaaaaa&1
    // b
    | bbbbbbbbbbbbb&2
  )
  // baz
  | baz1&baz2;

=====================================output=====================================
export type a =
  // foo
  | (foo1 & foo2)
  // bar
  | (bar1 & bar2)
  // prettier-ignore
  | (| aaaaaaaaaaaaa&1
    // b
    | bbbbbbbbbbbbb&2)
  // baz
  | (baz1 & baz2);

export type b =
  // foo
  | (foo1 & foo2)
  // bar
  | (bar1 & bar2)
  // prettier-ignore
  | (| aaaaaaaaaaaaa&1
    // b
    | bbbbbbbbbbbbb&2)
  // baz
  | (baz1 & baz2);

================================================================================
`;

exports[`prettier-ignore-parenthesized-type.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Foo =
  // prettier-ignore
  (
    aa
  );

=====================================output=====================================
type Foo =
  // prettier-ignore
  aa;

================================================================================
`;
